--- a/changelog.mdx
+++ b/changelog.mdx
@@ -8,9 +8,9 @@ hideToc: True
 
 ## July 1, 2024
 
-### Chalk GRPC
+### Chalk gRPC
 
-We have shipped a GRPC engine for Chalk that drastically improves performance by **at least 2x** through improved data
+We shipped a gRPC engine for Chalk that drastically improves performance by **at least 2x** through improved data
 serialization, efficient data transfer, and a migration from Python to Go and C++. You can now use the ChalkGRPCClient
 to run queries with the GRPC engine, and fetch enriched metadata about your feature sets and resolvers through the
 `get_graph` method.
@@ -48,7 +48,7 @@ dataset = client.offline_query(
 
 ### Underscore Static Planning
 
-We have shipped underscore static planning, which enables you to define feature resolution using underscore notation
+We shipped underscore static planning, which enables you to define feature resolution using underscore notation
 in the feature definition, that is then translated to performant C++ code. This is currently shipped for basic
 arithmetic and logical operations, and we are continuing to build out more underscore functionality! See the code
 snippet below for some examples of how to use underscore static planning.
@@ -91,7 +91,7 @@ environments:
 
 ### Resource Configuration Management in Dashboard
 
-We've updated our UI for resource configuration management in the dashboard! You can now toggle your view between
+We updated our UI for resource configuration management in the dashboard! You can now toggle your view between
 a GUI or a JSON editor. The GUI exposes all the configuration options available in the JSON editor, including
 values that aren't set, and allows you to easily adjust your cluster's resources to fit your needs.
 
@@ -99,7 +99,7 @@ values that aren't set, and allows you to easily adjust your cluster's resources
 
 ### Datasource and Feature level RBAC
 
-We've expanded the functionality of our service tokens to enable role-based access control (RBAC) at both the
+We expanded the functionality of our service tokens to enable role-based access control (RBAC) at both the
 datasource and feature level. On the datasource level, you can now restrict a token to only access datasources
 with matching tags to resolve features. On the feature level, you can restrict a token's access to tagged features
 either by blocking the token from returning tagged features in any queries but allowing the feature values to be
@@ -109,7 +109,7 @@ used in the computation of other features, or by blocking the token from accessi
 
 ### New Datasources and Native Drivers
 
-We've added integrations for Trino and Spanner as new datasources. We've also added native drivers for Postgres and
+We added integrations for Trino and Spanner as new datasources. We've also added native drivers for Postgres and
 Spanner, which drastically improves performance for these datasources.
 
 ### Heartbeating
@@ -119,7 +119,7 @@ runs that are no longer detected as "failed" after a certain period of time.
 
 ### Incremental Status
 
-We've shipped statuses during incremental runs such that users can get a signal of the current high water mark of
+We shipped statuses during incremental runs such that users can get a signal of the current high water mark of
 data being updated.
 
 ```bash
@@ -133,7 +133,7 @@ Last Execution Timestamp: 2024-07-01T00:01:27.421873+00:00
 ````
 
 ### Miscellaneous improvements
-* In addition to the changes listed above, we have also shipped a number of smaller improvements including but not
+* In addition to the changes listed above, we also shipped a number of smaller improvements including but not
 limited to:
     * spellcheck (based on Levenshtein distance) in SQL file resolvers
     * type errors on failed annotation parsing
