--- a/changelog.mdx
+++ b/changelog.mdx
@@ -95,7 +95,7 @@ We updated our UI for resource configuration management in the dashboard! You ca
 a GUI or a JSON editor. The GUI exposes all the configuration options available in the JSON editor, including
 values that aren't set, and allows you to easily adjust your cluster's resources to fit your needs.
 
-[resource configuration management](/img/cloud-resource-config.png)
+![resource configuration management](/img/cloud-resource-config.png)
 
 ### Datasource and Feature level RBAC
 
@@ -105,7 +105,7 @@ with matching tags to resolve features. On the feature level, you can restrict a
 either by blocking the token from returning tagged features in any queries but allowing the feature values to be
 used in the computation of other features, or by blocking the token from accessing tagged features entirely.
 
-[datasource and feature level rbac](/img/datasource-feature-rbac.png)
+![datasource and feature level rbac](/img/datasource-feature-rbac.png)
 
 ### New Datasources and Native Drivers
 
