fix typo in changelog

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -68,7 +68,7 @@ class SampleFeatureSet:
 
 You can now add tags to your deployments. Tags must be unique to each of your environments. If you add an already existing tag to a new deployment, Chalk will remove the tag from your old deployment.
 
-Tags can be added with the `-deployment-tag` flag in the chalk CLI:
+Tags can be added with the `--deployment-tag` flag in the Chalk CLI:
 
 ```sh
 chalk apply --deployment-tag=latest --deployment-tag=v1.0.4
