--- a/databricks_offline_store.mdx
+++ b/databricks_offline_store.mdx
@@ -12,8 +12,8 @@ not available on Standard plans) in the same region as your Chalk deployment, al
 1.  A Unity Catalog in the same region as your Chalk deployment (must be assigned to the workspace).
 2. Create a schema for Chalk within the Unity Catalog, i.e. “chalk_offline_store”.
 3. A Databricks SQL warehouse.
-  a. The “Unity Catalog” feature must be enabled.
-  b. This also requires the “Pro” feature to be enabled.
+    -  The “Unity Catalog” feature must be enabled.
+    -  This also requires the “Pro” feature to be enabled.
 4. Recommended warehouse size is 2X-Small (can be scaled up later).
 
 After this phase of setup is complete, Chalk needs the following information:
