add feature filtering

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -7,6 +7,13 @@ description: Updates to Chalk!
 
 ## July 1, 2024
 
+### Feature Catalog
+
+We are in the process of making updates to the feature catalog. You can now view and filter features
+in the feature catalog by their tags and owners.
+
+![Feature catalog filtering by tag and owner](/img/feature_catalog_tag_owner.png)
+
 ### Chalk gRPC
 
 We shipped a gRPC engine for Chalk that drastically improves performance by **at least 2x** through improved data
