Add two IAM policies to AWS deployment to permit deleting Chalk-managed roles

--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -120,6 +120,8 @@ infrastructure in your cloud account:
                 "iam:AttachRolePolicy",
                 "iam:AddRoleToInstanceProfile",
                 "iam:AddClientIDToOpenIDConnectProvider",
+                "iam:ListInstanceProfilesForRole",
+                "iam:DeletePolicy",
                 "elasticloadbalancing:*",
                 "eks:*",
                 "ecr:*",
