--- a/changelog.mdx
+++ b/changelog.mdx
@@ -7,7 +7,7 @@ description: Updates to Chalk!
 
 ## July 10, 2024
 
-### Feature Catalog
+### Feature catalog
 
 You can now view and filter features in the feature catalog by their tags and owners.
 
