add spine sql query documentation

--- a/training-client.mdx
+++ b/training-client.mdx
@@ -55,12 +55,14 @@ in downstream ML tasks.
 
 ### Input
 
-As [input](/api-docs#ChalkClient.offline_query.input), `offline_query` takes a
-[chalk.DataFrame](/docs/dataframe) or [pandas.DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html)
-with one column for each known feature in the input.
-The primary key feature must be included among the inputs.
+[Offline queries](/api-docs#ChalkClient.offline_query) can receive input from a DataFrame, mapping, or SQL query.
+Regardless of the format, the primary key feature must be included.
 
-Alternatively, instead of a `DataFrame`, users can pass a mapping from features to a list of values for each feature.
+#### DataFrames and mappings as input
+
+The [input](/api-docs#ChalkClient.offline_query.input) parameter accepts [chalk.DataFrame](/docs/dataframe),
+[pandas.DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html), or a mapping. DataFrames should
+include one column for each known feature in the input. Mappings should map from each feature to a list of its values:
 
 ```python
 input={
@@ -68,6 +70,55 @@ input={
     User.age: [23, 40]
 }
 ```
+
+#### SQL queries as input
+`offline_query` also takes [spine_sql_query](/api-docs#ChalkClient.offline_query.spine_sql_query) as an alternative
+input parameter for retrieving feature values from your offline data store. 
+
+Spine SQL queries are recommended in the following scenarios:
+
+1. You want to retrieve data for multiple rows at once. Chalk will compute an efficient query plan for loading multiple
+rows of data at once. Chalk will also reuse data between rows where appropriate.
+2. You want to query from Chalk as your offline data store. You can reduce unnecessary back-and-forth requests by having
+Chalk execute the SQL query and handle the result rows directly.
+3. You want to use multiple [feature namespaces](/docs/features#namespacing) in your input. Spine SQL queries accept
+multiple feature namespaces as column names.
+
+`spine_sql_query` expects each column in the result to correspond to a feature. Chalk replaces `__` in column names with
+`.` to form Chalk feature names. For example, `seller__id` corresponds to the `Seller.id` feature.
+
+<TipInfo>
+    The "ts" column is always interpreted as the observation time for the row.
+</TipInfo>
+
+```python
+output = chalk_client.query(
+    spine_sql_query=f"""
+        SELECT
+            t.txn_time AS ts,
+            t.seller_id AS seller__id,
+            t.buyer_id as buyer__id,
+            t.amount as txn_amount,
+            t.payment_type as txn_payment_type
+        FROM transactions AS t
+        WHERE t.update_at >= {now - timedelta(days=30)}
+    """,
+    outputs=[
+        Seller.id,
+        Buyer.id,
+        Buyer.account_created_date,
+        Txn.payment_type,
+        # Computed in the seller namespace from the 'seller.id' spine feature.
+        Seller.recent_transactions_volume,
+        # Computed in the buyer namespace from the 'buyer.id' spine feature.
+        Buyer.total_spent_last_30d,
+        # Passed through from the SQL query
+        Txn.amount,
+    ],
+)
+
+```
+
 
 ### Input times
 
