--- a/changelog.mdx
+++ b/changelog.mdx
@@ -32,7 +32,7 @@ Chalk resource groups create separate independent deployments of the query serve
 example, one team may want to make long-running analytics queries and another may want to make low-latency queries in
 line with customer requests. 
 
-We have updated Cloud Resource Configuration page! You can now configure resource groups to use completely independent
+We have updated the Cloud Resource Configuration page! You can now configure resource groups to use completely independent
 node pools to ensure your workflows run on separate computer hardware. The configuration page also allows you to specify
 exactly what kind of hardware will be available in each resource group so you can optimize the balance between cost and
 performance. 
