add trino and spanner as supported data sources

--- a/integrations.mdx
+++ b/integrations.mdx
@@ -41,3 +41,5 @@ Chalk provides out-of-the-box support for Databricks as a SQL source.
 - **[Custom Data Sources](/docs/generic)** -
   Chalk offers extra optimizations for some data sources, but you don't need Chalk to officially support a data source to use it!
 
+In addition to these providers, Chalk also supports Trino, Spanner, and others. For the most recent list of data sources
+we offer, go to your dashboard's Data Sources tab.
